Fixed img height to auto on mobile for index.html

--- a/style.scss
+++ b/style.scss
@@ -538,6 +538,7 @@ nav{
                     width: 30vw;
                     background-repeat: no-repeat;
                     margin: 4.8% 0% 0% 0%;
+                    height: auto;
                 }
 
             }
